New Crowdin updates (#15548)
* New translations: site.xml (Chinese Simplified)

* New translations: site.xml (Tagalog)

* New translations: coordinates.xml (Luxembourgish)

* New translations: site.xml (Luxembourgish)

* New translations: study.xml (Luxembourgish)

* New translations: site.xml (Hebrew)

* New translations: site.xml (Arabic)

* New translations: faq.xml (Arabic)

* New translations: swiss.xml (Arabic)

* New translations: appeal.xml (Arabic)

* New translations: faq.xml (Arabic)

* New translations: arena.xml (Arabic)

* New translations: team.xml (Arabic)

* New translations: coordinates.xml (Arabic)

* New translations: faq.xml (Arabic)

* New translations: swiss.xml (Arabic)

* New translations: appeal.xml (Arabic)

* New translations: ublog.xml (Arabic)

* New translations: swiss.xml (Arabic)

* New translations: site.xml (Arabic)

* New translations: site.xml (Arabic)

* New translations: faq.xml (Arabic)

* New translations: swiss.xml (Arabic)

* New translations: broadcast.xml (Korean)

* New translations: broadcast.xml (Arabic)

* New translations: broadcast.xml (Romanian)

* New translations: broadcast.xml (French)

* New translations: broadcast.xml (Spanish)

* New translations: broadcast.xml (Afrikaans)

* New translations: broadcast.xml (Belarusian)

* New translations: broadcast.xml (Bulgarian)

* New translations: broadcast.xml (Catalan)

* New translations: broadcast.xml (Czech)

* New translations: broadcast.xml (Danish)

* New translations: broadcast.xml (German)

* New translations: broadcast.xml (Greek)

* New translations: broadcast.xml (Basque)

* New translations: broadcast.xml (Finnish)

* New translations: broadcast.xml (Irish)

* New translations: broadcast.xml (Gujarati)

* New translations: broadcast.xml (Hebrew)

* New translations: broadcast.xml (Hungarian)

* New translations: broadcast.xml (Italian)

* New translations: broadcast.xml (

--- a/translation/dest/broadcast/es-ES.xml
+++ b/translation/dest/broadcast/es-ES.xml
@@ -23,9 +23,9 @@
   <string name="tournamentDescription">Breve descripción del torneo</string>
   <string name="fullDescription">Descripción completa del evento</string>
   <string name="fullDescriptionHelp">Descripción larga opcional de la emisión. %1$s está disponible. La longitud debe ser inferior a %2$s caracteres.</string>
-  <string name="sourceUrlOrGameIds">Enlace de origen o identificador de la partida</string>
+  <string name="sourceSingleUrl" comment="An input box. The user can add the external URL the PGN playback of the game is coming from, to set up their event broadcast.">URL origen del archivo PGN</string>
   <string name="sourceUrlHelp">URL que Lichess comprobará para obtener actualizaciones PGN. Debe ser públicamente accesible desde Internet.</string>
-  <string name="gameIdsHelp">Alternativamente, puedes introducir hasta 64 identificadores de partida, separados por espacios.</string>
+  <string name="sourceGameIds">Hasta 64 identificadores de partidas de Lichess, separados por espacios.</string>
   <string name="startDate">Fecha de inicio en tu zona horaria</string>
   <string name="startDateHelp">Opcional, si sabes cuando comienza el evento</string>
   <string name="credits">Cita la fuente</string>
