--- a/translation/dest/broadcast/de-DE.xml
+++ b/translation/dest/broadcast/de-DE.xml
@@ -23,9 +23,9 @@
   <string name="tournamentDescription">Kurze Turnierbeschreibung</string>
   <string name="fullDescription">Vollständige Ereignisbeschreibung</string>
   <string name="fullDescriptionHelp">Optionale, ausführliche Beschreibung der Übertragung. %1$s ist verfügbar. Die Beschreibung muss kürzer als %2$s Zeichen sein.</string>
-  <string name="sourceUrlOrGameIds">Quell-URL oder Partie-IDs</string>
+  <string name="sourceSingleUrl" comment="An input box. The user can add the external URL the PGN playback of the game is coming from, to set up their event broadcast.">PGN Quell-URL</string>
   <string name="sourceUrlHelp">URL die Lichess abfragt um PGN Aktualisierungen zu erhalten. Sie muss öffentlich aus dem Internet zugänglich sein.</string>
-  <string name="gameIdsHelp">Alternativ kannst du bis zu 64 durch Leerzeichen getrennte Lichess-Partie-IDs eingeben.</string>
+  <string name="sourceGameIds">Bis zu 64 Lichess Partie-IDs, getrennt durch Leerzeichen.</string>
   <string name="startDate">Startdatum in deiner eigenen Zeitzone</string>
   <string name="startDateHelp">Optional, falls du weißt wann das Ereignis beginnt</string>
   <string name="credits">Erwähne die Quelle</string>
